...
  case _play = "play"
  case _playfill = "play.fill"
  case _playcircle = "play.circle"
  case _playcirclefill = "play.circle.fill"
  case _playsquare = "play.square"
  case _playsquarefill = "play.square.fill"
  case _playrectangle = "play.rectangle"
  case _playrectanglefill = "play.rectangle.fill"
  case _playslash = "play.slash"
  case _playslashfill = "play.slash.fill"
  case _pause = "pause"
  case _pausefill = "pause.fill"
  case _pausecircle = "pause.circle"
...
  case _creditcardand123 = "creditcard.and.123"
  case _creditcardtrianglebadgeexclamationmark = "creditcard.trianglebadge.exclamationmark"
  case _giftcard = "giftcard"
  case _giftcardfill = "giftcard.fill"
  case _walletpass = "wallet.pass"
  case _walletpassfill = "wallet.pass.fill"
  case _wandandrays = "wand.and.rays"
  case _wandandraysinverse = "wand.and.rays.inverse"
  case _wandandstars = "wand.and.stars"
  case _wandandstarsinverse = "wand.and.stars.inverse"
  case _crop = "crop"
  case _croprotate = "crop.rotate"
  case _diallow = "dial.low"
...
  case _simcard = "simcard"
  case _simcardfill = "simcard.fill"
  case _simcard2 = "simcard.2"
  case _simcard2fill = "simcard.2.fill"
  case _sdcard = "sdcard"
  case _sdcardfill = "sdcard.fill"
  case _esim = "esim"
  case _esimfill = "esim.fill"
  case _touchid = "touchid"
  case _bonjour = "bonjour"
  case _atom = "atom"
  case _scalemass = "scalemass"
  case _scalemassfill = "scalemass.fill"
...
