...

  @Published var oscErrorOccured = false
  @Published var oscErrorDescription = ""

  @Published var encoderWheelLabels = ["", "", "", "", ""]
  @Published var encoderWheelValues = ["", "", "", "", ""]
  @Published var commandLine = "Command line text"
  @Published var blind: Color = .gray
  @Published var highlight: Color = .gray
  @Published var clear: Color = .gray
  @Published var macro: Color = .gray
  @Published var kindKeys: [ButtonFunctionNames: Color] = [
    ButtonFunctionNames.intensity: .gray,
...
